[project]
name = "URDR"
version = "0.1.0"
description = "Universal Relation Data Reflection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "addict>=2.4.0",
    "fastapi<0.126.0",
    "jinja2>=3.1.6",
    "litestar>=2.21.1",
    "pydantic<2",
    "pymysql>=1.1.2",
    "pyodbc>=5.3.0",
    "pypandoc>=1.17",
    "python-jose>=3.5.0",
    "python-magic>=0.4.27",
    "ruamel-yaml>=0.19.1",
    "simplejson>=3.20.2",
    "sqlglot>=30.1.0",
    "typer>=0.24.1",
    "uvicorn>=0.42.0",
    "xattr>=1.3.0",
]
